# HTTPServer

./: .gitignore  CMakeLists.txt  README.md
Apps/GomokuServer/: config.sh  database-8.x.sql  database.sql  resource_path.json
Apps/GomokuServer/include/: AiGame.h  GomokuServer.h  ResourceManager.h
Apps/GomokuServer/include/handlers/: AiGameMoveHandler.h  AiGameStartHandler.h  EntryHandler.h  GameBackendHandler.h  LoginHandler.h  LogoutHandler.h  MenuHandler.h  RegisterHandler.h
Apps/GomokuServer/src/: GomokuServer.cpp  main.cpp
Apps/GomokuServer/src/handlers/: AiGameStartHandler.cpp  EntryHandler.cpp  GameBackendHandler.cpp  MenuHandler.cpp
Apps/MarkdownServer/include/: MarkdownServer.h
Apps/MarkdownServer/resource/: editor.html  index.html
Apps/MarkdownServer/resource/css/: style.css
Apps/MarkdownServer/src/: MarkdownServer.cpp  main.cpp
HttpServer/include/core/: Awaitable.h  IOBuffer.h  Logging.h  Ssl.h
HttpServer/include/http/: HttpContext.h  HttpRequest.h  HttpResponse.h  HttpServer.h
HttpServer/include/middleware/: Middleware.h  MiddlewareChain.h
HttpServer/include/middleware/compress/: CompressConfig.h  CompressMiddleware.h
HttpServer/include/middleware/cors/: CorsConfig.h  CorsMiddleware.h
HttpServer/include/middleware/logging/: LoggingMiddleware.h
HttpServer/include/middleware/ratelimit/: RateLimitConfig.h  RateLimitMiddleware.h
HttpServer/include/router/: Router.h  RouterHandler.h
HttpServer/include/session/: Session.h  SessionManager.h  SessionStorage.h
HttpServer/include/ssl/: SslConfig.h  SslConnection.h  SslContext.h  SslTypes.h
HttpServer/include/utils/: FileUtil.h  JsonUtil.h  MysqlUtil.h
HttpServer/include/utils/db/: DbConnection.h  DbConnectionPool.h  DbException.h
HttpServer/src/http/: HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp
HttpServer/src/middleware/: MiddlewareChain.cpp
HttpServer/src/middleware/compress/: CompressMiddleware.cpp
HttpServer/src/middleware/cors/: CorsMiddleware.cpp
HttpServer/src/middleware/logging/: LoggingMiddleware.cpp
HttpServer/src/middleware/ratelimit/: RateLimitMiddleware.cpp
HttpServer/src/router/: Router.cpp
HttpServer/src/session/: Session.cpp  SessionManager.cpp  SessionStorage.cpp
HttpServer/src/ssl/: SslContext.cpp
HttpServer/src/utils/db/: DbConnection.cpp  DbConnectionPool.cpp
tests/: HttpContextTest.cpp  HttpRequestTest.cpp  SessionTest.cpp  bench_server.cpp  ssl_smoke.cpp
